test/tests/stages/14_pointers/valid/function_calls/update_value_through_pointer_parameter.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: update_value
        List[1]: 
          TIdentifier: ptr
        CB: 
          List[3]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: old_val
                  CSingleInit: 
                    CDereference: 
                      CVar: 
                        TIdentifier: ptr
                        None: 
                      None: 
                    None: 
                  Int: 
                  None: 
            CS: 
              CExpression: 
                CAssignment: 
                  None: 
                  CDereference: 
                    CVar: 
                      TIdentifier: ptr
                      None: 
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 10
                    None: 
                  None: 
            CS: 
              CReturn: 
                CVar: 
                  TIdentifier: old_val
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[1]: 
            Pointer: 
              Int: 
          Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[5]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: x
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 20
                      None: 
                    None: 
                  Int: 
                  None: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: result
                  CSingleInit: 
                    CFunctionCall: 
                      TIdentifier: update_value
                      List[1]: 
                        CAddrOf: 
                          CVar: 
                            TIdentifier: x
                            None: 
                          None: 
                      None: 
                    None: 
                  Int: 
                  None: 
            CS: 
              CIf: 
                CBinary: 
                  CNotEqual: 
                  CVar: 
                    TIdentifier: result
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 20
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 1
                            None: 
                None: 
            CS: 
              CIf: 
                CBinary: 
                  CNotEqual: 
                  CVar: 
                    TIdentifier: x
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 10
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 2
                            None: 
                None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
